# gooaye

./: .env.example  .gitignore  CLAUDE.md
.github/workflows/: deploy.yml  update-data.yml
backend/: pyproject.toml  requirements.txt
backend/gooaye/: __init__.py  config.py
backend/gooaye/analytics/: __init__.py  backtest.py  performance.py  prices.py
backend/gooaye/db/: __init__.py  client.py  upsert.py
backend/gooaye/extractor/: __init__.py  extract.py  schema.py
backend/gooaye/normalize/: __init__.py  canonical.py
backend/gooaye/prices/: __init__.py  fetch.py
backend/gooaye/scraper/: __init__.py  fetch.py  pack.py  rss.py
backend/scripts/: backfill_dates.py  compare_models.py  extract.py  fetch_prices.py  load_db.py  run_analytics.py  scrape.py  update_all.py
docs/: deployment-plan.md
frontend/: .env.example  .prettierignore  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json
frontend/public/: CNAME
frontend/src/: App.vue  style.css
frontend/src/lib/: auth.ts  (+9 more)
supabase/: config.toml
supabase/migrations/: 20260617000001_init.sql  20260617000002_asset_type.sql  20260618000001_analytics.sql  20260621000001_auth_gate.sql  20260621000002_bull_stats.sql  20260621000003_advisor_security_definer.sql  20260621000004_episode_transcript.sql  20260624000001_rls_initplan.sql  20260625000001_login_logs.sql  20260625000002_login_logs_trigger.sql  20260625000003_invite_email.sql  20260625000004_invite_email_revoke_public.sql  20260625000005_roles.sql  20260625000006_is_admin_revoke_anon.sql  20260626000001_advisor_fixes.sql  (+7 more)
(+28 files in other folders)
